# SquiggleMark

./: .gitignore  AlsaAudioOut.cpp  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  ControlsAreaWidget.cpp  ControlsAreaWidget.h  ControlsAreaWidget.ui  Crypto.cpp  Crypto.h  DeviceTableView.cpp  DeviceTableView.h  FFMpeg.cpp  FFMpeg.h  FileListLoading.cpp  FileListLoading.h  FileListLoading.ui  FileListView.cpp  FileListView.h  FileSelectionWidget.cpp  FileSelectionWidget.h  FileSelectionWidget.ui  FontHelper.cpp  FontHelper.h  ITunesScreenShots.cpp  ITunesScreenShots.h  ImageHelper.cpp  ImageHelper.h  ImageResizer.cpp  ImageResizer.h  IosDeviceIcons.cpp  IosDeviceIcons.h  IosDeviceImages.cpp  IosDeviceImages.h  IosLaunchImages.cpp  IosLaunchImages.h  LicenseType.h  MacOSAppIcons.cpp  MacOSAppIcons.h  MainSplitter.cpp  (+53 more)
install-scripts/: SquiggleMarkSetup.iss  add-menuitem.sh  copylibs.bat  ffmpeg.sh  install-linux  macinstall.sh  macos-tips.txt  makemacinstall.sh  remove-menuitem.sh  run-squigglemark  win32-copylibs.bat
resources/: Info.plist  SpriteMill.icns  SpriteMill_license.key  SquiggleMark.icns  SquiggleMark_license.key  birdie-icon.xcf  colorpicker.xcf  expand-image.xcf  license.txt  license3.txt  mac-dmg-bg.xcf  peacock-icon.xcf  private.key  private.pem  privatekey.rc  squigglemark.rc
